--- a/mytime-api/render.yaml
+++ b/mytime-api/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: mytime-fastapi
+    name: mytime-api  # Changed from mytime-fastapi
     env: python
-    region: singapore  # Better for Asian traffic
+    region: singapore
     plan: free
     branch: main
     rootDir: .
@@ -40,7 +40,7 @@ services:
       - key: ALLOWED_ORIGINS
         value: |
           [
-            "https://mytime-fastapi.onrender.com",
+            "https://mytime-api.onrender.com",  # Updated URL
             "http://localhost:3000", 
             "http://localhost:4200",
             "http://localhost:8000"
