--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -1,31 +1,14 @@
-# FastAPI Core
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
-
-# Database
-sqlalchemy==2.0.23
-pyodbc==5.0.1
-
-# Authentication & Security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-
-# Configuration
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-
-# AI/ML
-openai==1.6.1
-langchain==0.0.340
-
-# Utilities
-httpx==0.25.1
-requests==2.31.0
-feedparser==6.0.10
-redis==5.0.1
-
-# HTTP Client
-aiohttp==3.9.1
+annotated-types==0.7.0 ; python_version >= "3.8" and python_version < "4.0"
+anyio==3.7.1 ; python_version >= "3.8" and python_version < "4.0"
+click==8.1.8 ; python_version >= "3.8" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0" and platform_system == "Windows"
+exceptiongroup==1.3.1 ; python_version >= "3.8" and python_version < "3.11"
+fastapi==0.104.1 ; python_version >= "3.8" and python_version < "4.0"
+h11==0.16.0 ; python_version >= "3.8" and python_version < "4.0"
+idna==3.11 ; python_version >= "3.8" and python_version < "4.0"
+pydantic-core==2.27.2 ; python_version >= "3.8" and python_version < "4.0"
+pydantic==2.10.6 ; python_version >= "3.8" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.8" and python_version < "4.0"
+starlette==0.27.0 ; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.8" and python_version < "4.0"
+uvicorn==0.24.0.post1 ; python_version >= "3.8" and python_version < "4.0"
