updated for rust language

--- a/mytime-api/.env
+++ b/mytime-api/.env
@@ -9,7 +9,7 @@ API_V1_STR=/api/v1
 ALLOWED_ORIGINS=["http://localhost:4200","http://127.0.0.1:4200","http://localhost:3000","http://localhost:8080","http://localhost:8000"]
 
 # ============ DATABASE ============
-DATABASE_URL=mssql+pyodbc://olc_db_usr:DubaiDutyFree%402025@104.243.32.43/Claritydb?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes&Encrypt=yes
+DATABASE_URL=mssql+pyodbc://olc_db_usr:DubaiDutyFree%402025@104.243.32.43/DEV_Clarity_DB?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes&Encrypt=yes
 DATABASE_POOL_SIZE=10
 DATABASE_MAX_OVERFLOW=20
 DATABASE_ECHO_SQL=False
