--- a/mytime-api/alembic/alembic.ini
+++ b/mytime-api/alembic/alembic.ini
@@ -53,7 +53,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mssql+pyodbc://olc_db_usr:DubaiDutyFree@2025@104.243.32.43/Claritydb?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes
+sqlalchemy.url = mssql+pyodbc://olc_db_usr:DubaiDutyFree@2025@104.243.32.43/DEV_Clarity_DB?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
