--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -7,8 +7,8 @@ gunicorn==21.2.0
 sqlalchemy==2.0.23
 pyodbc==5.0.1
 
-# Authentication & Security - REMOVE cryptography
-python-jose==3.3.0  # REMOVE [cryptography]
+# Authentication & Security
+python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 
@@ -17,9 +17,9 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
-# AI/ML
+# AI/ML - REMOVE langchain for now
 openai==1.6.1
-langchain==0.0.340
+# langchain==0.0.340  # REMOVE THIS LINE
 
 # Utilities
 httpx==0.25.1
