--- a/mytime-api/render.yaml
+++ b/mytime-api/render.yaml
@@ -7,53 +7,19 @@ services:
     rootDir: mytime-api
     
     buildCommand: |
-      echo "🚀 Starting build process..."
-      
-      # Set environment variables for Rust
-      export CARGO_HOME=/tmp/cargo
-      export RUSTUP_HOME=/tmp/rustup
-      
-      # Install system dependencies
+      echo "🚀 Installing system dependencies..."
       apt-get update
-      apt-get install -y \
-        build-essential \
-        libssl-dev \
-        libffi-dev \
-        python3-dev \
-        g++ \
-        unixodbc-dev \
-        curl \
-        gnupg \
-        pkg-config
+      apt-get install -y g++ unixodbc-dev curl gnupg
       
-      # Install Microsoft ODBC driver
+      echo "📦 Installing Microsoft ODBC driver..."
       curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
       curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list
       apt-get update
       ACCEPT_EULA=Y apt-get install -y msodbcsql17
       
-      echo "🐍 Installing Python dependencies..."
-      
-      # Upgrade pip
-      pip install --upgrade pip setuptools wheel
-      
-      # Install packages one by one to identify the problematic one
-      pip install fastapi==0.104.1
-      pip install uvicorn[standard]==0.24.0
-      pip install gunicorn==21.2.0
-      pip install sqlalchemy==2.0.23
-      pip install pyodbc==5.0.1
-      pip install python-jose==3.3.0
-      pip install passlib[bcrypt]==1.7.4
-      pip install pydantic==2.5.3
-      pip install pydantic-settings==2.1.0
-      pip install openai==1.6.1
-      # SKIP langchain for now: pip install langchain==0.0.340
-      pip install httpx==0.25.1
-      pip install requests==2.31.0
-      pip install feedparser==6.0.10
-      pip install redis==5.0.1
-      pip install aiohttp==3.9.1
+      echo "🐍 Installing Python packages..."
+      pip install --upgrade pip
+      pip install -r requirements.txt
       
       echo "✅ Build completed successfully!"
     
@@ -62,10 +28,6 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
-      - key: PORT
-        value: 10000
-      - key: CRYPTOGRAPHY_DONT_BUILD_RUST
-        value: "1"
     
     healthCheckPath: /health
     autoDeploy: true
