--- a/mytime-api/render.yaml
+++ b/mytime-api/render.yaml
@@ -7,27 +7,60 @@ services:
     rootDir: mytime-api
     
     buildCommand: |
-      echo "🚀 Installing system dependencies..."
-      apt-get update
-      apt-get install -y g++ unixodbc-dev curl gnupg
+      echo "🚀 Setting up build environment..."
       
-      echo "📦 Installing Microsoft ODBC driver..."
+      # Set environment to avoid Rust issues
+      export CARGO_NET_GIT_FETCH_WITH_CLI=true
+      export PIP_NO_BINARY=""
+      
+      # Install ONLY system dependencies we need
+      apt-get update
+      apt-get install -y \
+        g++ \
+        unixodbc-dev \
+        curl \
+        gnupg
+      
+      # Install ODBC driver
       curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
       curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list
       apt-get update
       ACCEPT_EULA=Y apt-get install -y msodbcsql17
       
       echo "🐍 Installing Python packages..."
-      pip install --upgrade pip
-      pip install -r requirements.txt
       
-      echo "✅ Build completed successfully!"
+      # Upgrade pip with specific settings
+      pip install --upgrade "pip<24"  # Older pip version
+      
+      # Install packages WITHOUT wheels that need Rust
+      # First install packages that DON'T need Rust
+      pip install fastapi==0.104.1
+      pip install uvicorn[standard]==0.24.0
+      pip install gunicorn==21.2.0
+      pip install pydantic==2.5.3
+      pip install pydantic-settings==2.1.0
+      pip install python-dotenv==1.0.0
+      pip install sqlalchemy==2.0.23
+      pip install pyodbc==5.0.1
+      pip install python-jose==3.3.0
+      pip install passlib[bcrypt]==1.7.4
+      pip install openai==1.6.1
+      pip install httpx==0.25.1
+      pip install requests==2.31.0
+      
+      # SKIP problematic packages for now
+      # pip install feedparser==6.0.10
+      # pip install aiohttp==3.9.1
+      
+      echo "✅ Build completed!"
     
     startCommand: gunicorn app.main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11.0  # Use 3.11, not 3.13
+      - key: MATURIN_PEP517_ARGS
+        value: "--no-sdist --no-wheel"
     
     healthCheckPath: /health
     autoDeploy: true
