--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -1,29 +1,28 @@
-# FastAPI Core
+# FastAPI Core - KEEP AS IS
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
 
-# Database
+# Database - KEEP AS IS
 sqlalchemy==2.0.23
 pyodbc==5.0.1
 
-# Authentication & Security
-python-jose==3.3.0
-passlib[bcrypt]==1.7.4
+# Authentication & Security - MODIFY THIS
+python-jose==3.3.0  # Keep but will use different backend
+passlib==1.7.4      # Remove [bcrypt] - use plain passlib
 python-multipart==0.0.6
 
-# Configuration
+# Configuration - KEEP AS IS
 pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
-# AI/ML
+# AI/ML - KEEP AS IS
 openai==1.6.1
 
-# Utilities - REMOVE feedparser for now
+# Utilities - KEEP AS IS
 httpx==0.25.1
 requests==2.31.0
-# REMOVED: feedparser==6.0.10
 
-# HTTP Client - REMOVE aiohttp for now
-# REMOVED: aiohttp==3.9.1
+# Optional: Add this for JWT (replaces cryptography)
+pycryptodome==3.20.0
