--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -1,11 +1,11 @@
-# FastAPI Core
+# FastAPI Framework
 fastapi==0.104.1
-uvicorn[standard]==0.25.0
+uvicorn[standard]==0.24.0
 gunicorn==21.2.0
 
-# Database
+# SQL Server Database
 sqlalchemy==1.4.51
-pyodbc==5.1.0
+pyodbc==5.0.1
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
@@ -14,18 +14,21 @@ python-multipart==0.0.6
 pycryptodome==3.20.0
 bcrypt==4.1.2
 
-# Configuration
+# Configuration - USE THESE VERSIONS (Pre-built wheels available)
 pydantic==2.5.3
+pydantic-core==2.14.5
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
-# AI/ML
+# AI/ML Integration
 openai==1.6.1
 
-# Utilities
-httpx==0.26.0
+# HTTP & Networking
+httpx==0.25.1
 requests==2.31.0
 
-# Optional
+# Development & Type Support
+typing-extensions==4.12.0
+
+# Database Migrations
 alembic==1.13.1
-typing-extensions==4.12.0  # Updated from 4.9.0 to 4.12.0
