--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -1,6 +1,6 @@
 --only-binary :all:
 # ============================================
-# MyTime API - RENDER COMPATIBLE VERSION
+# MyTime API - WORKING VERSION FOR RENDER
 # ============================================
 
 # FastAPI Framework
@@ -8,12 +8,12 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
 
-# SQL Server Database
-sqlalchemy==1.4.51
+# SQL Server Database - UPDATED VERSIONS
+sqlalchemy==2.0.23  # Changed from 1.4.51 to 2.0.23
 pyodbc==5.0.1
 
-# Authentication & Security - YOU'RE ALREADY USING PyJWT!
-pyjwt==2.8.0                    # Confirm this is in requirements.txt
+# Authentication & Security
+pyjwt==2.8.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 pycryptodome==3.20.0
