--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -1,6 +1,6 @@
 --only-binary :all:
 # ============================================
-# MyTime API - WORKING VERSION FOR RENDER
+# MyTime API - RENDER COMPATIBLE
 # ============================================
 
 # FastAPI Framework
@@ -8,9 +8,9 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
 
-# SQL Server Database - UPDATED VERSIONS
-sqlalchemy==2.0.23  # Changed from 1.4.51 to 2.0.23
-pyodbc==5.0.1
+# SQL Server Database - UPDATED
+sqlalchemy==2.0.23
+pyodbc==5.2.0  # Changed from 5.0.1 to 5.2.0
 
 # Authentication & Security
 pyjwt==2.8.0
