--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -1,39 +1,19 @@
 --only-binary :all:
-# ============================================
-# MyTime API - RENDER COMPATIBLE
-# ============================================
-
-# FastAPI Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
-
-# SQL Server Database
-sqlalchemy==2.0.23
-pyodbc==5.2.0
-
-# Authentication & Security
-pyjwt==2.8.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pycryptodome==3.20.0
-bcrypt==4.1.2
-
-# Configuration - UPDATED PYDANTIC VERSIONS
-pydantic==2.5.3
-pydantic-core==2.41.5  # Changed from 2.14.6 to 2.41.5
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-
-# AI/ML Integration
-openai==1.6.1
-
-# HTTP & Networking
-httpx==0.25.1
-requests==2.31.0
-
-# Development & Type Support
-typing-extensions==4.12.0
-
-# Database Migrations
-alembic==1.13.1
+fastapi
+uvicorn[standard]
+gunicorn
+sqlalchemy
+pyodbc
+pyjwt
+passlib[bcrypt]
+python-multipart
+pycryptodome
+bcrypt
+pydantic
+pydantic-settings
+python-dotenv
+openai
+httpx
+requests
+typing-extensions
+alembic
