--- a/mytime-api/Dockerfile
+++ b/mytime-api/Dockerfile
@@ -1,21 +1,23 @@
 FROM python:3.11-slim
 
-# 1. Install SQL Server ODBC driver
-RUN apt-get update && \
-    apt-get install -y curl gnupg && \
-    curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
-    curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
-    apt-get update && \
-    ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev && \
-    apt-get clean
+# Update and install prerequisites
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg2 \
+    && rm -rf /var/lib/apt/lists/*
 
-# 2. Install Python packages
+# Add Microsoft repository
+RUN wget -qO- https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && wget -qO- https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list
+
+# Install SQL Server ODBC Driver
+RUN apt-get update \
+    && ACCEPT_EULA=Y apt-get install -y msodbcsql17 \
+    && apt-get install -y unixodbc-dev \
+    && apt-get clean
+
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-# 3. Copy application code
 COPY . .
-
-# 4. Start the application
 CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
