--- a/mytime-api/Dockerfile
+++ b/mytime-api/Dockerfile
@@ -1,23 +1,28 @@
 FROM python:3.11-slim
 
-# Update package list
-RUN apt-get update
-
-# Install prerequisites
-RUN apt-get install -y curl gnupg
-
-# Add Microsoft SQL Server repository (new method without apt-key)
-RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /usr/share/keyrings/microsoft-prod.gpg
-RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/debian/11/prod bullseye main" > /etc/apt/sources.list.d/mssql-release.list
-
-# Install ODBC Driver 17 (more stable than 18)
+# 1. Install SQL Server ODBC Driver - UPDATED METHOD
 RUN apt-get update && \
-    ACCEPT_EULA=Y apt-get install -y msodbcsql17 && \
+    apt-get install -y curl gnupg && \
+    # Download Microsoft GPG key and add it
+    curl -sSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /usr/share/keyrings/microsoft-archive-keyring.gpg && \
+    # Add Microsoft repository with proper signing
+    echo "deb [signed-by=/usr/share/keyrings/microsoft-archive-keyring.gpg] https://packages.microsoft.com/debian/11/prod bullseye main" > /etc/apt/sources.list.d/mssql-release.list && \
+    apt-get update && \
+    # Install ODBC driver
+    ACCEPT_EULA=Y apt-get install -y msodbcsql18 && \
+    # Install ODBC development files
     apt-get install -y unixodbc-dev && \
-    apt-get clean
+    # Clean up
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
+# 2. Install Python packages
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# 3. Copy application code
 COPY . .
+
+# 4. Start the application
 CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
