basic login integration

--- a/mytime-ui/angular.json
+++ b/mytime-ui/angular.json
@@ -57,7 +57,7 @@
               "src/assets/vendors/font-awesome/css/font-awesome.min.css",
               "src/assets/vendors/jquery-bar-rating/fontawesome-stars-o.css",
               "src/assets/vendors/jquery-bar-rating/fontawesome-stars.css",
-              "src/assets/css/style.css",
+              "src/assets/css/style.css"
             ],
             "scripts": [
               "src/assets/vendors/base/vendor.bundle.base.js",
