--- a/mytime-ui/angular.json
+++ b/mytime-ui/angular.json
@@ -54,6 +54,7 @@
               "src/assets/vendors/feather/feather.css",
               "src/assets/vendors/base/vendor.bundle.base.css",
               "src/assets/vendors/flag-icon-css/css/flag-icon.css",
+              "src/assets/vendors/mdi/css/materialdesignicons.min.css",
               "src/assets/vendors/font-awesome/css/font-awesome.min.css",
               "src/assets/vendors/jquery-bar-rating/fontawesome-stars-o.css",
               "src/assets/vendors/jquery-bar-rating/fontawesome-stars.css",
@@ -133,6 +134,7 @@
               "src/assets/vendors/feather/feather.css",
               "src/assets/vendors/base/vendor.bundle.base.css",
               "src/assets/vendors/flag-icon-css/css/flag-icon.css",
+              "src/assets/vendors/mdi/css/materialdesignicons.min.css",
               "src/assets/vendors/font-awesome/css/font-awesome.min.css",
               "src/assets/vendors/jquery-bar-rating/fontawesome-stars-o.css",
               "src/assets/vendors/jquery-bar-rating/fontawesome-stars.css",
