--- a/mytime-ui/package.json
+++ b/mytime-ui/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
+    "ag-grid-angular": "^34.3.1",
+    "ag-grid-community": "^34.3.1",
     "express": "^4.18.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
