--- a/mytime-ui/package.json
+++ b/mytime-ui/package.json
@@ -23,8 +23,11 @@
     "@angular/ssr": "^17.3.17",
     "ag-grid-angular": "^34.3.1",
     "ag-grid-community": "^34.3.1",
+    "bootstrap": "^5.3.8",
     "express": "^4.18.2",
+    "jquery": "^4.0.0",
     "ngx-toastr": "^17.0.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
