Remove the invalid buildOptimizer property from your angular.json:

--- a/mytime-ui/angular.json
+++ b/mytime-ui/angular.json
@@ -96,8 +96,7 @@
               "extractLicenses": true,
               "sourceMap": false,
               "namedChunks": false,
-              "aot": true,
-              "buildOptimizer": true
+              "aot": true
             },
             "development": {
               "optimization": false,
