update for cros policy

--- a/mytime-api/.env
+++ b/mytime-api/.env
@@ -6,7 +6,14 @@ VERSION=1.0.0
 API_V1_STR=/api/v1
 
 # CORS - Use JSON format
-ALLOWED_ORIGINS=["http://localhost:4200","http://127.0.0.1:4200","http://localhost:3000","http://localhost:8080","http://localhost:8000"]
+ALLOWED_ORIGINS=[
+                "http://localhost:4200",
+                "http://127.0.0.1:4200",
+                "http://localhost:3000",
+                "http://localhost:8080",
+                "http://localhost:8000",
+                "https://mytime-ui.netlify.app"
+                ]
 
 # ============ DATABASE ============
 DATABASE_URL=mssql+pyodbc://olc_db_usr:DubaiDutyFree%402025@104.243.32.43/DEV_Clarity_DB?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes&Encrypt=yes
