--- a/mytime-api/app/.env
+++ b/mytime-api/app/.env
@@ -5,8 +5,8 @@ PROJECT_NAME=MyTime - AI Integration API
 VERSION=1.0.0
 API_V1_STR=/api/v1
 
-# CORS
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:3000,http://localhost:8080,http://localhost:8000,http://127.0.0.1:4200
+# CORS - MUST INCLUDE YOUR NETLIFY URL
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:3000,http://localhost:8080,http://localhost:8000,http://127.0.0.1:4200,https://mytime-ui.netlify.app
 
 # ============ DATABASE ============
 DATABASE_URL=mssql+pyodbc://olc_db_usr:DubaiDutyFree@2025@104.243.32.43/DEV_Clarity_DB?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
@@ -34,6 +34,9 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_DEPLOYMENT=
 GOOGLE_AI_API_KEY=
 GOOGLE_AI_MODEL=gemini-pro
+
+# ============ RSS FEEDS ============
+BUSINESS_RSS_FEEDS={"economictimes":"https://economictimes.indiatimes.com/rssfeedsdefault.cms","mint":"https://www.livemint.com/rss/companies","business_standard":"https://www.business-standard.com/rss/home_page_top_stories.rss","moneycontrol":"https://www.moneycontrol.com/rss/buzzingstocks.xml","ndtv_profit":"https://feeds.feedburner.com/ndtvprofit-latest"}
 
 # ============ FEATURE FLAGS ============
 ENABLE_AI_ANALYSIS=True
