--- a/mytime-api/app/.env
+++ b/mytime-api/app/.env
@@ -9,7 +9,7 @@ API_V1_STR=/api/v1
 ALLOWED_ORIGINS=http://localhost:4200,http://localhost:3000,http://localhost:8080,http://localhost:8000,http://127.0.0.1:4200,https://mytime-ui.netlify.app
 
 # ============ DATABASE ============
-DATABASE_URL=mssql+pyodbc://olc_db_usr:DubaiDutyFree@2025@104.243.32.43/DEV_Clarity_DB?driver=ODBC+Driver+17+for+SQL+Server&TrustServerCertificate=yes
+DATABASE_URL=mssql+pyodbc:///?odbc_connect=DRIVER%3D%7BODBC+Driver+17+for+SQL+Server%7D%3BSERVER%3D104.243.32.43%3BDATABASE%3DDEV_Clarity_DB%3BUID%3Dolc_db_usr%3BPWD%3DDubaiDutyFree%402025%3BTrustServerCertificate%3Dyes%3B
 DATABASE_POOL_SIZE=10
 DATABASE_MAX_OVERFLOW=20
 DATABASE_ECHO_SQL=False
