--- a/mytime-api/app/.env
+++ b/mytime-api/app/.env
@@ -5,11 +5,18 @@ PROJECT_NAME=MyTime - AI Integration API
 VERSION=1.0.0
 API_V1_STR=/api/v1
 
-# CORS - MUST INCLUDE YOUR NETLIFY URL
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:3000,http://localhost:8080,http://localhost:8000,http://127.0.0.1:4200,https://mytime-ui.netlify.app
+# CORS - Use JSON format
+ALLOWED_ORIGINS=[
+                "http://localhost:4200",
+                "http://127.0.0.1:4200",
+                "http://localhost:3000",
+                "http://localhost:8080",
+                "http://localhost:8000",
+                "https://mytime-ui.netlify.app"
+                ]
 
 # ============ DATABASE ============
-DATABASE_URL=mssql+pyodbc:///?odbc_connect=DRIVER%3D%7BODBC+Driver+17+for+SQL+Server%7D%3BSERVER%3D104.243.32.43%3BDATABASE%3DDEV_Clarity_DB%3BUID%3Dolc_db_usr%3BPWD%3DDubaiDutyFree%402025%3BTrustServerCertificate%3Dyes%3B
+DATABASE_URL=mssql+pyodbc://olc_db_usr:DubaiDutyFree%402025@104.243.32.43/DEV_Clarity_DB?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes&Encrypt=yes
 DATABASE_POOL_SIZE=10
 DATABASE_MAX_OVERFLOW=20
 DATABASE_ECHO_SQL=False
@@ -20,6 +27,18 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
 BCRYPT_ROUNDS=12
+
+# ============ BACKBLAZE B2 STORAGE ============
+B2_ENDPOINT=s3.us-east-005.backblazeb2.com
+B2_KEY_ID=332633bece97
+B2_APP_KEY=00537f0af2eea022537d2605ef4ed7557424c2b859
+B2_BUCKET_NAME=mytime
+B2_BUCKET_ID=9393a26623636bce9cce0917
+B2_REGION=us-east-005
+B2_PUBLIC_URL=https://mytime.s3.us-east-005.backblazeb2.com
+B2_MAX_FILE_SIZE_MB=100
+B2_ALLOWED_FILE_TYPES=application/pdf,image/jpeg,image/jpg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/plain
+ENABLE_B2_STORAGE=True
 
 # ============ AI/ML SERVICES ============
 OPENAI_API_KEY=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
