--- a/mytime-api/requirements.txt
+++ b/mytime-api/requirements.txt
@@ -3,18 +3,20 @@ uvicorn[standard]
 gunicorn
 sqlalchemy
 pyodbc
+alembic
+boto3
+botocore
 pyjwt
 passlib[bcrypt]
-python-multipart
 pycryptodome
 bcrypt
+python-multipart
 pydantic
 pydantic-settings
+typing-extensions
 python-dotenv
-openai
 httpx
 requests
-typing-extensions
-alembic
-feedparser
 python-dateutil
+openai
+feedparser
