--- a/mytime-ui/package.json
+++ b/mytime-ui/package.json
@@ -24,6 +24,7 @@
     "ag-grid-angular": "^34.3.1",
     "ag-grid-community": "^34.3.1",
     "bootstrap": "^5.3.8",
+    "buffer": "^6.0.3",
     "express": "^4.18.2",
     "jquery": "^4.0.0",
     "ngx-toastr": "^17.0.2",
@@ -36,6 +37,7 @@
     "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "^17.3.17",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/backblaze-b2": "^1.5.6",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
