--- a/mytime-api/app/.env
+++ b/mytime-api/app/.env
@@ -30,13 +30,13 @@ BCRYPT_ROUNDS=12
 
 # ============ BACKBLAZE B2 STORAGE ============
 B2_ENDPOINT=s3.us-east-005.backblazeb2.com
-B2_KEY_ID=332633bece97
-B2_APP_KEY=00537f0af2eea022537d2605ef4ed7557424c2b859
+B2_KEY_ID=005332633bece970000000001
+B2_APP_KEY=K005cLrGz7IuTxILb2g5225gK12jaCU
 B2_BUCKET_NAME=mytime
 B2_BUCKET_ID=9393a26623636bce9cce0917
 B2_REGION=us-east-005
 B2_PUBLIC_URL=https://mytime.s3.us-east-005.backblazeb2.com
-B2_MAX_FILE_SIZE_MB=100
+B2_MAX_FILE_SIZE_MB=104857600  # Changed from 104857600 to 100
 B2_ALLOWED_FILE_TYPES=application/pdf,image/jpeg,image/jpg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/plain
 ENABLE_B2_STORAGE=True
 
